--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,15 +1,15 @@
-<html>
-    <head>
-        <title>tkz's blog</title>
-    </head>
-    <body>
-    {% for post in posts %}
-        <div>
-            <p>{{ post.title }}</p>
-        </div>
-    {% endfor %}
-        <div>
-            <p>It works!</p>
-        </div>
-    </body>
-</html>
+    {% extends 'blog/base.html' %}
+    {% block content %}
+        {% for post in posts %}
+            <div class="post">
+                {% if post.published_date %}
+                <div class="date">
+                    {{ post.published_date }}
+                </div>
+                {% endif %}
+                <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
+                <p>{{ post.text|linebreaksbr }}</p>
+            </div>
+        {% endfor %}
+    {% endblock %}
+
