--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -2,11 +2,10 @@
     background-color: #C25100;
 }
 
-h1 a {
+.page-header h1 a {
     color: #ffffff;
     font-family: 'Lobster', cursive;
 }
-
 
 body {
     padding-left: 15px;
