--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -5,14 +5,17 @@
     <head>
         <title>tkz's blog</title>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">         
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">      
+        <link href='//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext' rel='stylesheet' type='text/css'>   
         <link rel="stylesheet" href="{% static 'css/blog.css' %}">
     </head>
 
     <body>
         <div class="page-header">
-            <h1><a href="/">Django Girls Blog</a></h1>
+            <h1><a href="/">Up</a></h1>
+            <h1><a href="{% url 'post_new' %}" class="top-menu"><span class="glphicon glyphicon-plus"></span></a></h1>
         </div>
+
         
     <!--
     {% for post in posts %}
@@ -21,6 +24,7 @@
         </div>
     {% endfor %}
     -->
+    
     {% block content %}
     {% endblock %}
 
